<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_ride_seeker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_blue"
    android:orientation="vertical" >

    <include
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/header_rider" />

    <ScrollView
        android:id="@+id/scrollRideSeeker"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:overScrollMode="never"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/linearRideSeeker"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtRideSeeker"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/rouded_corner"
                android:gravity="center_horizontal"
                android:padding="3dp"
                android:text="@string/ride_seeker_lable"
                android:textColor="@android:color/black"
                android:textSize="@dimen/free_travel_app_size"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/lienarVehicleName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/editVehicalName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/editext_corner"
                    android:hint="@string/name_lable"
                    android:padding="10dp"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lienarVehicleRegistration"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/editVehicalRegister"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/editext_corner"
                    android:hint="@string/vehicle_regist_lable"
                    android:padding="10dp"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lienarVehicleType"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical" >

                <RadioGroup
                    android:id="@+id/radioGroupType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/radioBike"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/redio_button"
                        android:checked="true"
                        android:drawableRight="@drawable/bike" />

                    <RadioButton
                        android:id="@+id/radioCar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/redio_button"
                        android:drawableRight="@drawable/car" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lienarStartPoint"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/txtStartPoint"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/start_point_lable"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/register_text_size" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lienarCityName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/editCityName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/editext_corner"
                    android:hint="From"
                    android:padding="10dp"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lienarAreaName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone" >

                <EditText
                    android:id="@+id/editAreaName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/editext_corner"
                    android:hint="@string/area_name_lable"
                    android:padding="10dp"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lienarEndPoint"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/txtEndPoint"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/End_point_lable"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/register_text_size" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lienarEndPointCityName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/editEndPointCityName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/editext_corner"
                    android:hint="To"
                    android:padding="10dp"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lienarEndPointAreaName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone" >

                <EditText
                    android:id="@+id/editEndPointAreaName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/editext_corner"
                    android:hint="@string/area_name_lable"
                    android:padding="10dp"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lienarDate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/editDate"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/editext_corner"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/date_lable"
                    android:padding="10dp"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lienarTime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/editTime"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/editext_corner"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/time_lable"
                    android:padding="10dp"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lienarIntrestedPartnerOptional"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txtIntrestedPartnerOptional"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/IntrestedPartnerOptional_lable"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/register_text_size" />

                <LinearLayout
                    android:id="@+id/linearMaleFemale"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|right"
                    android:orientation="horizontal" >

                    <RadioGroup
                        android:id="@+id/radioGroupGender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:id="@+id/radio_male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:button="@drawable/redio_button"
                            android:checked="true"
                            android:drawableRight="@drawable/_male" />

                        <RadioButton
                            android:id="@+id/radio_female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:button="@drawable/redio_button"
                            android:drawableRight="@drawable/_female" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lienarContactNo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/editContactNo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/editext_corner"
                    android:hint="@string/Contact_no_lable"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lienarSave"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone" >

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/check"
                    android:paddingBottom="3dp"
                    android:paddingTop="3dp"
                    android:text="SAVE"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/free_travel_app_size" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>