<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_rider"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <include
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/header_ride_seeker" />

    <ScrollView
        android:id="@+id/scrollRider"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:overScrollMode="never"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/linearRider"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtRider"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/rouded_corner"
                android:gravity="center_horizontal"
                android:padding="3dp"
                android:text="@string/ride_seeker_lable"
                android:textColor="@android:color/black"
                android:textSize="@dimen/free_travel_app_size"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/lienarVehicleName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/editName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/editext_corner"
                    android:hint="@string/name_lable"
                    android:padding="10dp"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lienarRiderVehicleType"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/txtRiderVehicalTypeTop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/type_lable"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/txtvehical_register_size" />

                <RadioGroup
                    android:id="@+id/radioRiderGroup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/radioRiderTwoWheeler"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="2 WHEELER"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/txtvehical_register_size"
                        android:tint="@android:color/white" />

                    <RadioButton
                        android:id="@+id/radioRiderFourWheeler"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="4 WHEELER"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/txtvehical_register_size"
                        android:tint="@android:color/white" />
                </RadioGroup>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/lienarRiderCityName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/editTo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/editext_corner"
                    android:hint="To"
                    android:padding="10dp"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lienarRiderAreaName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone" >

                <EditText
                    android:id="@+id/editRiderAreaName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/editext_corner"
                    android:hint="@string/area_name_lable"
                    android:padding="10dp"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lienarRiderEndPointCityName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/editFrom"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/editext_corner"
                    android:hint="From"
                    android:padding="10dp"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lienarRiderEndPointAreaName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone" >

                <EditText
                    android:id="@+id/editRiderEndPointAreaName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/editext_corner"
                    android:hint="@string/area_name_lable"
                    android:padding="10dp"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lienarRiderDate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/editRiderDate"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/editext_corner"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/date_lable"
                    android:padding="10dp"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lienarRiderTime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/editRiderTime"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/editext_corner"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/time_lable"
                    android:padding="10dp"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lienarIntrestedPartnerOptional"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txtIntrestedPartnerOptional"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/IntrestedPartnerOptional_lable"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/register_text_size" />

               
                  <LinearLayout
                    android:id="@+id/linearMaleFemale"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|right"
                    android:orientation="horizontal" >

                    <RadioGroup
                        android:id="@+id/radioGroupGender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:id="@+id/radio_male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:button="@drawable/redio_button"
                            android:checked="true"
                            android:drawableRight="@drawable/_male" />

                        <RadioButton
                            android:id="@+id/radio_female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:button="@drawable/redio_button"
                            android:drawableRight="@drawable/_female" />
                    </RadioGroup>
               
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lienarRiderContactNo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/editNo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/editext_corner"
                    android:hint="@string/Contact_no_lable"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lienarRiderSave"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone" >

                <Button
                    android:id="@+id/btnRiderSave"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rouded_corner_green"
                    android:paddingBottom="3dp"
                    android:paddingTop="3dp"
                    android:text="SAVE"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/free_travel_app_size" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
